// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Radio matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="c-cDEphG decaRadio-root"
  >
    <input
      class="c-iIDhYW c-iIDhYW-hIWLRp-color-primary c-iIDhYW-kueLmT-isDisabled-false c-iIDhYW-eDpIpt-cv decaRadio-input"
      id=":r0:"
      type="radio"
      value=""
    />
    <label
      class="c-gpKKJQ c-gpKKJQ-boLhOk-size-md c-gpKKJQ-hqEieG-isDisabled-false c-gpKKJQ-jQVVMl-cv"
      for=":r0:"
    >
      <div
        class="decaRadio-circle"
      />
      Label Text
    </label>
  </div>
</DocumentFragment>
`;

exports[`components/Radio renders all colors 1`] = `
<DocumentFragment>
  <div
    class="c-cDEphG decaRadio-root"
  >
    <input
      class="c-iIDhYW c-iIDhYW-hIWLRp-color-primary c-iIDhYW-kueLmT-isDisabled-false c-iIDhYW-eDpIpt-cv decaRadio-input"
      id=":r1:"
      type="radio"
      value=""
    />
    <label
      class="c-gpKKJQ c-gpKKJQ-boLhOk-size-md c-gpKKJQ-hqEieG-isDisabled-false"
      for=":r1:"
    >
      <div
        class="decaRadio-circle"
      />
    </label>
  </div>
  <div
    class="c-cDEphG decaRadio-root"
  >
    <input
      class="c-iIDhYW c-iIDhYW-bEiFsv-color-secondary c-iIDhYW-kueLmT-isDisabled-false c-iIDhYW-ekuowN-cv decaRadio-input"
      id=":r2:"
      type="radio"
      value=""
    />
    <label
      class="c-gpKKJQ c-gpKKJQ-boLhOk-size-md c-gpKKJQ-hqEieG-isDisabled-false"
      for=":r2:"
    >
      <div
        class="decaRadio-circle"
      />
    </label>
  </div>
  <div
    class="c-cDEphG decaRadio-root"
  >
    <input
      class="c-iIDhYW c-iIDhYW-jftABy-color-success c-iIDhYW-kueLmT-isDisabled-false c-iIDhYW-eWAPfR-cv decaRadio-input"
      id=":r3:"
      type="radio"
      value=""
    />
    <label
      class="c-gpKKJQ c-gpKKJQ-boLhOk-size-md c-gpKKJQ-hqEieG-isDisabled-false"
      for=":r3:"
    >
      <div
        class="decaRadio-circle"
      />
    </label>
  </div>
  <div
    class="c-cDEphG decaRadio-root"
  >
    <input
      class="c-iIDhYW c-iIDhYW-iPWTSD-color-warning c-iIDhYW-kueLmT-isDisabled-false c-iIDhYW-cKVzQN-cv decaRadio-input"
      id=":r4:"
      type="radio"
      value=""
    />
    <label
      class="c-gpKKJQ c-gpKKJQ-boLhOk-size-md c-gpKKJQ-hqEieG-isDisabled-false"
      for=":r4:"
    >
      <div
        class="decaRadio-circle"
      />
    </label>
  </div>
  <div
    class="c-cDEphG decaRadio-root"
  >
    <input
      class="c-iIDhYW c-iIDhYW-jbDGbB-color-error c-iIDhYW-kueLmT-isDisabled-false c-iIDhYW-evnrkN-cv decaRadio-input"
      id=":r5:"
      type="radio"
      value=""
    />
    <label
      class="c-gpKKJQ c-gpKKJQ-boLhOk-size-md c-gpKKJQ-hqEieG-isDisabled-false"
      for=":r5:"
    >
      <div
        class="decaRadio-circle"
      />
    </label>
  </div>
</DocumentFragment>
`;

exports[`components/Radio renders all sizes 1`] = `
<DocumentFragment>
  <div
    class="c-cDEphG decaRadio-root"
  >
    <input
      class="c-iIDhYW c-iIDhYW-hIWLRp-color-primary c-iIDhYW-kueLmT-isDisabled-false c-iIDhYW-eDpIpt-cv decaRadio-input"
      id=":r6:"
      type="radio"
      value=""
    />
    <label
      class="c-gpKKJQ c-gpKKJQ-biyOBk-size-sm c-gpKKJQ-hqEieG-isDisabled-false"
      for=":r6:"
    >
      <div
        class="decaRadio-circle"
      />
    </label>
  </div>
  <div
    class="c-cDEphG decaRadio-root"
  >
    <input
      class="c-iIDhYW c-iIDhYW-hIWLRp-color-primary c-iIDhYW-kueLmT-isDisabled-false c-iIDhYW-eDpIpt-cv decaRadio-input"
      id=":r7:"
      type="radio"
      value=""
    />
    <label
      class="c-gpKKJQ c-gpKKJQ-boLhOk-size-md c-gpKKJQ-hqEieG-isDisabled-false"
      for=":r7:"
    >
      <div
        class="decaRadio-circle"
      />
    </label>
  </div>
  <div
    class="c-cDEphG decaRadio-root"
  >
    <input
      class="c-iIDhYW c-iIDhYW-hIWLRp-color-primary c-iIDhYW-kueLmT-isDisabled-false c-iIDhYW-eDpIpt-cv decaRadio-input"
      id=":r8:"
      type="radio"
      value=""
    />
    <label
      class="c-gpKKJQ c-gpKKJQ-fEMOrJ-size-lg c-gpKKJQ-hqEieG-isDisabled-false"
      for=":r8:"
    >
      <div
        class="decaRadio-circle"
      />
    </label>
  </div>
</DocumentFragment>
`;
